# wordtrie

./: .gitignore  LICENSE  README.md  pyproject.toml  style.sh
notebooks/: test.ipynb
src/wordtrie/: __init__.py  __main__.py  scrabble.py  trie.py
