[project]
name = "wordtrie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "ycc39@cam.ac.uk" }
]
requires-python = ">=3.11,<3.12"
dependencies = []

[project.scripts]
wordtrie = "wordtrie.__main__:main"
scrabble = "wordtrie.scrabble:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "pylint>=3.3.8",
]

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true
aggressive = 1

[tool.isort]
line_length = 100
multi_line_output = 5

[tool.pylint.main]

# Files or directories to be skipped. They should be base names, not paths.
ignore = [".venv", "test"]

# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use, and will cap the count on Windows to
# avoid hangs.
jobs = 8


[tool.pylint.basic]

# Good variable names which should always be accepted, separated by a comma.
good-names = ["i", "j", "k", "ex", "Run", "_"]

# Maximum number of characters on a single line.
max-line-length = 100

[tool.pylint."messages control"]
disable = []
